@@ -996,7 +996,7 @@ public class AddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(mailing)
+				Boolean.valueOf(mailing)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -1064,8 +1064,8 @@ public class AddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(mailing), String.valueOf(begin), String.valueOf(end),
-				String.valueOf(obc)
+				Boolean.valueOf(mailing), String.valueOf(begin),
+				String.valueOf(end), String.valueOf(obc)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -1243,7 +1243,7 @@ public class AddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(primary)
+				Boolean.valueOf(primary)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -1311,8 +1311,8 @@ public class AddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(primary), String.valueOf(begin), String.valueOf(end),
-				String.valueOf(obc)
+				Boolean.valueOf(primary), String.valueOf(begin),
+				String.valueOf(end), String.valueOf(obc)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -1888,7 +1888,7 @@ public class AddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(mailing)
+				Boolean.valueOf(mailing)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -1956,7 +1956,7 @@ public class AddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(primary)
+				Boolean.valueOf(primary)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
