@@ -187,7 +187,7 @@ public class CountryPersistenceImpl extends BasePersistence
 		String finderClassName = Country.class.getName();
 		String finderMethodName = "findByActive";
 		String[] finderParams = new String[] { Boolean.class.getName() };
-		Object[] finderArgs = new Object[] { new Boolean(active) };
+		Object[] finderArgs = new Object[] { Boolean.valueOf(active) };
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
 
@@ -241,8 +241,8 @@ public class CountryPersistenceImpl extends BasePersistence
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			};
 		Object[] finderArgs = new Object[] {
-				new Boolean(active), String.valueOf(begin), String.valueOf(end),
-				String.valueOf(obc)
+				Boolean.valueOf(active), String.valueOf(begin),
+				String.valueOf(end), String.valueOf(obc)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -493,7 +493,7 @@ public class CountryPersistenceImpl extends BasePersistence
 		String finderClassName = Country.class.getName();
 		String finderMethodName = "countByActive";
 		String[] finderParams = new String[] { Boolean.class.getName() };
-		Object[] finderArgs = new Object[] { new Boolean(active) };
+		Object[] finderArgs = new Object[] { Boolean.valueOf(active) };
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
 
