@@ -1020,7 +1020,7 @@ public class EmailAddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(primary)
+				Boolean.valueOf(primary)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -1089,8 +1089,8 @@ public class EmailAddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(primary), String.valueOf(begin), String.valueOf(end),
-				String.valueOf(obc)
+				Boolean.valueOf(primary), String.valueOf(begin),
+				String.valueOf(end), String.valueOf(obc)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -1662,7 +1662,7 @@ public class EmailAddressPersistenceImpl extends BasePersistence
 			};
 		Object[] finderArgs = new Object[] {
 				new Long(companyId), new Long(classNameId), new Long(classPK),
-				new Boolean(primary)
+				Boolean.valueOf(primary)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
