@@ -371,7 +371,7 @@ public class RegionPersistenceImpl extends BasePersistence
 		String finderClassName = Region.class.getName();
 		String finderMethodName = "findByActive";
 		String[] finderParams = new String[] { Boolean.class.getName() };
-		Object[] finderArgs = new Object[] { new Boolean(active) };
+		Object[] finderArgs = new Object[] { Boolean.valueOf(active) };
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
 
@@ -425,8 +425,8 @@ public class RegionPersistenceImpl extends BasePersistence
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			};
 		Object[] finderArgs = new Object[] {
-				new Boolean(active), String.valueOf(begin), String.valueOf(end),
-				String.valueOf(obc)
+				Boolean.valueOf(active), String.valueOf(begin),
+				String.valueOf(end), String.valueOf(obc)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -561,7 +561,7 @@ public class RegionPersistenceImpl extends BasePersistence
 				Long.class.getName(), Boolean.class.getName()
 			};
 		Object[] finderArgs = new Object[] {
-				new Long(countryId), new Boolean(active)
+				new Long(countryId), Boolean.valueOf(active)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -619,8 +619,8 @@ public class RegionPersistenceImpl extends BasePersistence
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			};
 		Object[] finderArgs = new Object[] {
-				new Long(countryId), new Boolean(active), String.valueOf(begin),
-				String.valueOf(end), String.valueOf(obc)
+				new Long(countryId), Boolean.valueOf(active),
+				String.valueOf(begin), String.valueOf(end), String.valueOf(obc)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
@@ -955,7 +955,7 @@ public class RegionPersistenceImpl extends BasePersistence
 		String finderClassName = Region.class.getName();
 		String finderMethodName = "countByActive";
 		String[] finderParams = new String[] { Boolean.class.getName() };
-		Object[] finderArgs = new Object[] { new Boolean(active) };
+		Object[] finderArgs = new Object[] { Boolean.valueOf(active) };
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
 
@@ -1011,7 +1011,7 @@ public class RegionPersistenceImpl extends BasePersistence
 				Long.class.getName(), Boolean.class.getName()
 			};
 		Object[] finderArgs = new Object[] {
-				new Long(countryId), new Boolean(active)
+				new Long(countryId), Boolean.valueOf(active)
 			};
 		Object result = FinderCache.getResult(finderClassName,
 				finderMethodName, finderParams, finderArgs, getSessionFactory());
